# -------------------------------------------------------
# util cmake build script for sgffabric.
# Written by: Salvatore
# Modified by: Salvatore
# -------------------------------------------------------

# -------------------------------------------------------
# Source directories containing all the necessary .cpp files
# -------------------------------------------------------
set(MORTAL_DIR ${CMAKE_SOURCE_DIR}/Source/mortal)
set(MORTAL_SRC
${MORTAL_DIR}/gfx.cpp
)

# -------------------------------------------------------
# Include directory
# -------------------------------------------------------

# -------------------------------------------------------
# module
# -------------------------------------------------------
#add_library (mortal_module ${MORTAL_SRC})
